# PSYS23DocuPHDG

./: .clang-format  .gitignore  .gitlab-ci.yml  3_826_84_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_8o_8d.html  3_827_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_827_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_8o_8d.html  3_827_84_2CompilerIdC_2CMakeCCompilerId_8c.html  CMakeLists.txt  Dockerfile  Doxyfile  HeatMatrix  HeatMatrix_8cpp.html  HeatMatrix_8hpp.html  HeatMatrix_8hpp_source.html  README.md  README_8md.html  annotated.html  classHeatMatrix-members.html  classHeatMatrix.html  classes.html  deprecated.html  dir_13620b7f1330796542fcb7e43593aaf8.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b1d1693821387c9b21af95d8c35ef949.html  dir_bfb7a416128a03bdeaf2ce2fb448bf96.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e488fa7569c67c80589c1d1fad936974.html  dir_e9b73607ea356fdf1d60fc7e63411e55.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  globals_vars.html  heat__functions_8cpp.html  heat__functions_8cpp_8o_8d.html  heat__functions_8hpp.html  heat__functions_8hpp_source.html  (+22 more)
.github/workflows/: doxygen-gh-pages.yml
docs/: 3_826_84_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_827_84_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_827_84_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_8o_8d.html  HeatMatrix_8cpp_8o_8d.html  HeatMatrix_8hpp.html  HeatMatrix_8hpp_source.html  README_8md.html  annotated.html  classHeatMatrix-members.html  classHeatMatrix.html  deprecated.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_11966fa84c5c6712cb322ffaf4344d77.html  dir_1bf6f635a729dbe853c0c409bf177774.html  dir_2d01e45cebe6b8de37dd4e1a2c37b06c.html  dir_42d94e65713ad4cab42a72005b18f6d0.html  dir_4483cd0e4277da9b55fd6b9dd94f5ab0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_83fcfd4b4ab617b4f740bb9001a089e5.html  dir_a0e54a037cb4b71e6f36374bcb0945c4.html  dir_db298e6662907a3c29f1509a6ed282d5.html  dir_db4354203cda9ffe7b26f7e8f06f8816.html  dir_e21179458ad31d15ea2006c6f89aa35d.html  dir_fee39dc9bc1f2a69345b9808470b935a.html  files.html  functions_func.html  globals_func.html  heat__functions_8cpp.html  heat__functions_8hpp.html  heat__functions_8hpp_source.html  main_8cpp.html  md_README.html  namespaceheatFunctions.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  pages.html  src_2heat__functions_8cpp_8o_8d.html  src_2main_8cpp_8o_8d.html
docs/html/: 3_826_84_2CompilerIdC_2CMakeCCompilerId_8c.html  3_827_81_2CompilerIdC_2CMakeCCompilerId_8c.html  HeatMatrix_8cpp.html  HeatMatrix_8hpp.html  HeatMatrix_8hpp_source.html  annotated.html  classes.html  deprecated.html  dir_6199c6b7df24f2c07db1ce5d5393e463.html  dir_697d5a97bae66e06160c13cda29d2661.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e55791176183746c13b64e74a7022317.html  functions.html  globals.html  globals_defs.html  globals_vars.html  heat__functions_8cpp.html  heat__functions_8hpp_source.html  index.html  main_8cpp.html  md_README.html  menudata.js  namespaceheatFunctions.html  namespacemembers.html  pages.html
docs/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  classes_0.js  defines_1.js  defines_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  (+9 more)
include/: HeatMatrix.hpp  heat_functions.hpp
mpi/: mpi_main.cpp  mpi_run
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_2.js  defines_3.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  pages_2.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  (+8 more)
src/: HeatMatrix.cpp  heat_functions.cpp  main.cpp  mpi_main.cpp  mpi_run  t_HeatMatrix.cc
test/: CMakeLists.txt  t_HeatMatrix  t_HeatMatrix.cc  t_HeatMatrix[1]_include.cmake  t_HeatMatrix[1]_tests.cmake  t_heat_functions.cc
time_measuring/: big_parallel_16.csv  big_parallel_2.csv  big_parallel_20.csv  big_parallel_4.csv  big_parallel_8.csv  big_serial.csv  medium_parallel_16.csv  medium_parallel_2.csv  medium_parallel_20.csv  medium_parallel_4.csv  medium_parallel_8.csv  medium_serial.csv  small_parallel_16.csv  small_parallel_2.csv  small_parallel_20.csv  small_parallel_4.csv  small_parallel_8.csv  small_serial.csv
(+12 files in other folders)
